k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartsupport-prod
  labels:
    name: smartsupport-prod
    security: high
